--- a/UX/WWM-FE/Index.html
+++ b/UX/WWM-FE/Index.html
@@ -66,16 +66,7 @@
                         <div class="alert-content">People immediately at-risk</div>
                     </li>
                     <li class="flex-item">
-                        <!-- Single button -->
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                How to help? <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Donate</a></li>
-                                <li><a href="#">Raise Awareness</a></li>
-                            </ul>
-                        </div>
+                        
                     </li>
                 </ul>
             </div>
@@ -112,6 +103,8 @@
             var options = {
                 region: '002', // Africa
                 resolution: 'cities',
+                width: 1500,
+                height: 800,
                 colorAxis: {colors: ['#ff9999', '#ff0000']} // orange to blue
             };
 
