About page+ some css improvements

--- a/UX/WWM-FE/Index.html
+++ b/UX/WWM-FE/Index.html
@@ -138,7 +138,7 @@
                 <p>World Without Malaria is a project from Microsoft that aims to save lives in Malaria stricken areas.<br /> We use NASA data collected by the MERRA-2 project, and coorelate it using Machine-Learning to predict upcoming Malaria outbreaks. Early prediction and treatment is a key factor in eliminating Malaria world-wide.</p>
             </div>
             <div class="risk-feed">
-                <h2 class="risk-feed-title">Real-Time Global Risk Assesment:</h2>
+                <h2 class="risk-feed-title">Real-Time Global Risk Assesment</h2>
                 <div class="alertNav"></div>
             </div>
         </div>
@@ -148,6 +148,24 @@
         </div>
 
         <div class="tab-pane fade" id="tab3"></div>
+
+        <div class="tab-pane fade" id="tab4">
+            <div class="row">
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="images/team.png" alt="World Without Malaria Team">
+                        <div class="caption">
+                            <h3>World Without Malaria Team</h3>
+                            <p>We're a team from Microsoft Working on the 2017 hackathon.</p>
+                            <p>Contact us at assafn (at) microsoft.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                <h1></h1>
+                <p></p>
+            
+        </div>
 
     </div>
       
