Various small fixes

--- a/UX/WWM-FE/Index.html
+++ b/UX/WWM-FE/Index.html
@@ -137,7 +137,7 @@
                         <ul class="list-group">
                             <li class="list-group-item">{{method}}</li>
                             <li class="list-group-item">{{activeCountries}} Active countries</li>
-                            <li class="list-group-item"><a>{{link}}</a></li>
+                            <li class="list-group-item"><a href="{{link}}">{{link}}</a></li>
                         </ul>
                     </div>
                 </div>
@@ -211,8 +211,8 @@
     </script>
 </head>
 <body onload="initialize()">
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
+    <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
+        <div class="container-fluid navbar-custom">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">World Without Malaria</a>
             </div>
@@ -254,7 +254,7 @@
                         <img src="images/team.png" alt="World Without Malaria Team">
                         <div class="caption">
                             <h3>World Without Malaria Team</h3>
-                            <p>We're a team from Microsoft Working on the 2017 hackathon.</p>
+                            <p>We're a team working for the Microsoft 2017 hackathon.</p>
                             <p>Contact us at assafn (at) microsoft.com</p>
                         </div>
                     </div>
