Publishing profile + small css fixes

--- a/UX/WWM-FE/Index.html
+++ b/UX/WWM-FE/Index.html
@@ -47,7 +47,7 @@
                           {
                               name: "Global Health Council",
                               method: "Policy and Advocacy: Advocates US govt for increased visibility, leadership and investment in global health policy and budget priorities.",
-                              activeCountries: "--",
+                              activeCountries: "157",
                               link: "http://globalhealth.org/"
                           },
                           {
@@ -129,10 +129,8 @@
         <ul class="flex-container">
             {{#each this}}
             <li class="flex-item">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        {{name}}
-                    </div>
+                <div class="panel panel-default org">
+                    <div class="panel-heading"><b>{{name}}</b></div>
                     <div class="panel-body">
                         <ul class="list-group">
                             <li class="list-group-item">{{method}}</li>
@@ -231,7 +229,7 @@
         <div class="tab-pane fade in active" id="tab1">
             <div class="jumbotron jumbo">
                 <h1>World Without Malaria</h1>
-                <p>World Without Malaria is a project from Microsoft that aims to save lives in Malaria stricken areas.<br /> We use NASA data collected by the MERRA-2 project, and coorelate it using Machine-Learning to predict upcoming Malaria outbreaks. Early prediction and treatment is a key factor in eliminating Malaria world-wide.</p>
+                <p>World Without Malaria is a project from Microsoft that aims to save lives in Malaria stricken areas.<br /> We use NASA data collected by the MERRA-2 project, and correlate it using Machine-Learning to predict upcoming Malaria outbreaks. Early prediction and treatment is a key factor in eliminating Malaria world-wide. </p>
             </div>
             <div class="risk-feed">
                 <h2 class="risk-feed-title">Real-Time Global Risk Assesment</h2>
